--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,22 @@
   display: grid;
   place-items: center;
 }
+
+.app__container {
+  height: 700px;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #ff8474;
+  border-radius: 12px;
+  padding: 1rem;
+} 
+
+.app__todo__container {
+  flex: 1;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
