--- a/src/Components/Input/Input.css
+++ b/src/Components/Input/Input.css
@@ -8,18 +8,18 @@
     align-items: center;
 }
 
-.input-main-div input {
+input {
     background: none;
     border: none;
     margin-left: 12px;
     flex: 1;
 }
 
-.input-main-div input:focus { 
+input:focus { 
     outline: none;
 }
 
-.input-main-div button {
+button {
     margin-right: 8px;
     background-color:gainsboro;
     border: none;
