tweaking some things

--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
 }
 
 .app__container {
-  height: 700px;
-  width: 500px;
+  height: 70%;
+  width: 30%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,4 +23,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media screen and (max-width: 1120px) {
+  .app__container {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 620px) {
+  .app__container {
+    width: 380px;
+  }
 }
